--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Primera app con React</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="" rel="stylesheet">
-    </head>
-    <body>
-        <h1>Primera aplicacion con React</h1>
-        <div id="root"></div>
-        <p>Probando la nueva app</p>
-        <h2>Segundo título</h2>
-    </body>
+
+<head>
+    <title>Primera app con React</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="" rel="stylesheet">
+</head>
+
+<body>
+    <!-- <h1>Primera aplicacion con React</h1> -->
+    <div id="root"></div>
+    <!-- <p>Probando la nueva app</p>
+        <h2>Segundo título</h2> -->
+</body>
+
 </html>
